instance start/stop added
